# opencode-pty

./: .gitignore  README.md  devenv.nix  package.json  server.ts  tsconfig.build.json  tsconfig.json  tui.ts
.github/workflows/: ci.yml  native-posix.yml  release.yml
.opencode/: opencode.json
docs/superpowers/plans/: 2026-07-13-bun-daemon-implementation.md
docs/superpowers/specs/: 2026-07-13-bun-daemon-design.md
scripts/: native-artifact-verifier.ts  prepare-native-artifact.ts  publish-native-artifacts.ts  run-with-timeout.mjs  sign-macos-worker.ts  sign-native-artifacts.ts  sign-windows-worker.ts  stage-native-worker.ts  verify-native-artifacts.ts  write-native-manifest.ts
src/: plugin.ts  tui-state.ts  tui.tsx
src/daemon/: main.ts  server.ts  storage.ts  supervisor.ts  types.ts  worker-client.ts
src/plugin/: types.ts
src/plugin/pty/: daemon-client.ts  formatters.ts  manager.ts  permissions.ts  types.ts  wildcard.ts  xml.ts
src/plugin/pty/tools/: bash.ts  exec.ts  kill.ts  kill.txt  list.ts  list.txt  read.ts  read.txt  resize.ts  spawn.ts  spawn.txt  wait.ts  write.ts  write.txt
src/shared/: constants.ts  native-worker-targets.ts
test/: daemon.test.ts  native-worker-targets.test.ts  packaged-native-daemon.ts  stage-native-worker.test.ts  tui-state.test.ts
worker/: Cargo.toml
worker/src/: main.rs
